Normal Tools(Alt +N), copy and paste not work #67370

Closed
opened 2019-07-21 08:32:55 +02:00 by ok · 6 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: 38d4483c6a
Worked: (optional)

Short description of error
It seems that copy and paste in normal tools(Alt + N) can not be worked.

I tried many times in various ways,
default cube, default settings and some of my models.
But I could not confirm that the vector was pasted.

I could confirm the rotation and smoothing of the vector.

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 750 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-18 14:52, hash: `38d4483c6a` Worked: (optional) **Short description of error** It seems that copy and paste in normal tools(Alt + N) can not be worked. I tried many times in various ways, default cube, default settings and some of my models. But I could not confirm that the vector was pasted. I could confirm the rotation and smoothing of the vector.
Author

Added subscriber: @ASIMOFU

Added subscriber: @ASIMOFU

Added subscriber: @zeauro

Added subscriber: @zeauro

It looks like Copy Vectors is a bad naming. Operator can only copy one element vector.

To display Split Normals, open Viewport Overlays popover and activate icon button corresponding to Split Normals.
Then, to see an obvious change, Paste action should not be done on same element or vector should be modified after Copy and before Paste.

I can see a coherent change in RC2.
So, if you still have a problem, add a .blend file to talk about same mesh, same vertex or same face.

It looks like Copy Vectors is a bad naming. Operator can only copy one element vector. To display Split Normals, open Viewport Overlays popover and activate icon button corresponding to Split Normals. Then, to see an obvious change, Paste action should not be done on same element or vector should be modified after Copy and before Paste. I can see a coherent change in RC2. So, if you still have a problem, add a .blend file to talk about same mesh, same vertex or same face.
Author

OK.
Please look this triangle .blend.
Triangle.blend

Copy a normal of the modified vertex on edit mode.
And select other vertex and paste normal, but it don't change direction.

I didn't find how to this operator works...

OK. Please look this triangle .blend. [Triangle.blend](https://archive.blender.org/developer/F7621956/Triangle.blend) Copy a normal of the modified vertex on edit mode. And select other vertex and paste normal, but it don't change direction. I didn't find how to this operator works...
Sebastian Parborg self-assigned this 2019-07-30 15:34:57 +02:00

This issue was referenced by 363dd97ae8

This issue was referenced by 363dd97ae80a4d097d92398b1769c1dca09c0ad9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67370
No description provided.