Fix T67370 Normal Tools(Alt +N), copy and paste not work

The copy operator requried at least a vert AND a face to be selected.
It should only require that a vert OR a face is selected.